Fix spacing in index.html, spell-check content, and tweek formatting via style sheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-/* * {
-  border: solid 1px #000000;
-} */
-
 body {
   background-color: #ffffff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -30,6 +26,7 @@ div.projects ol li {
 
 div.projects ul {
   padding-left: 16px;
+  font-size: 85%;
 }
 
 div.projects ul li {
@@ -50,4 +47,10 @@ div.aboutMe img {
   float: left;
   margin: 10px 10px 10px 0px;
   border: solid 6px #d3d3d3;
+}
+
+div.aboutMe span {
+  font-weight: bold;
+  font-style: italic;
+  color: #3f3f3f;
 }
